--- a/genpact/index.html
+++ b/genpact/index.html
@@ -5,10 +5,15 @@
 <title> GenPact Portal </title>
 <style> 
 body{
-background-color:#000;
-color:lime;
+  background-color:#000;
+  color:lime;
+  font-weight:bold;
+  font-family:'tahoma','courier-new';
 }
 
+  h1{
+    color:Yellow;
+  }
 
 </style>
 </header>
@@ -25,14 +30,14 @@ color:lime;
 
 <h4>
 
-+ So yeah let's keep this brief , Successfully bypassed GenshinImpact Kernel Drive (AC) .
++ So yeah let's keep this brief , Successfully bypassed GenshinImpact Kernel Drive (AC) .<br><br>
 
 + Took care of Info uploading so You don't have to be scared from your Data/Crash infos being sent to the server anymore (Because that's how they filter cheaters from none cheaters in the backend).
-
+<br><br>
 + You can use CheatEngine without being Detected.
-
+<br><br>
 + SpeedHack for now , other hacks are comming up such as GodMod / 1hk / no CD .. etc
-
+<br><br>
 If interested in private stuff , hit me up on discord Kaizuku#4781 .
 </h4>
 
