--- a/genpact/index.html
+++ b/genpact/index.html
@@ -11,9 +11,31 @@ body{
   font-family:'tahoma','courier-new';
 }
 
+  h4{
+    border:1px dotted yellowgreen;
+    background-color:#111;
+    font-size:12px;
+    font-weight:normal;
+  
+  }
+  
   h1{
     color:Yellow;
   }
+  
+  span{
+  color:red;
+  }
+  
+  button{
+    cursor:pointer;
+    padding:5px;
+    border:1px solid yellowgreen;
+    border-radius:5px;
+    background-color:#333;
+    color:yellowgreen;
+  }
+  
 
 </style>
 </header>
@@ -30,27 +52,28 @@ body{
 
 <h4>
 
-+ So yeah let's keep this brief , Successfully bypassed GenshinImpact Kernel Drive (AC) .<br><br>
++ So yeah let's keep this brief , Successfully bypassed GenshinImpact Kernel Drive (AC) .<br>
 
-+ Took care of Info uploading so You don't have to be scared from your Data/Crash infos being sent to the server anymore (Because that's how they filter cheaters from none cheaters in the backend).
-<br><br>
++ Took care of Info uploading so You don't have to be scared from your Data/Crash infos being
+ <br> sent to the server anymore (Because that's how they filter cheaters from none cheaters in the backend).
+<br>
 + You can use CheatEngine without being Detected.
-<br><br>
+<br>
 + SpeedHack for now , other hacks are comming up such as GodMod / 1hk / no CD .. etc
-<br><br>
-If interested in private stuff , hit me up on discord Kaizuku#4781 .
+<br>
+  If interested in private stuff , hit me up on discord <span>Kaizuku#4781</span> .
 </h4>
 
-<br>
+<br><br>
 <button>D O W N L O A D v1.0
 </button>
-<br>
+<br><br>
 
 
 </center>
 
 
-<body>
+</body>
 
 
 </html>
