--- a/genpact/index.html
+++ b/genpact/index.html
@@ -28,13 +28,14 @@ body{
   color:red;
   }
   
-  button{
+  a{
     cursor:pointer;
     padding:5px;
     border:1px solid yellowgreen;
     border-radius:5px;
     background-color:#333;
     color:yellowgreen;
+    text-decoration:none;
   }
   
 
@@ -67,8 +68,7 @@ body{
   </h4>
 
 <br><br>
-<button>D O W N L O A D v1.0
-</button>
+<a>D O W N L O A D v1.0</a>
 <br><br>
 
 
